remade header-subtitle-text

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </ul>
             </nav>
             <section class="header-title">
-                <span class="header-subtitle-text">
+                <span class="header-subtitle-text">featured class</span>
                     <h1 class="header-title-text">
                         The role of
                         User Interface
@@ -37,7 +37,6 @@
                         <img src="/img/icons/arrow.svg" alt="">
                         <span class="join-text">Join <br> The Class</span>
                     </a>
-                </span>
             </section>
         </div>
     </header>
