--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
   <link rel="stylesheet" href="style.css">
   <title>Сайт визитка</title>
 </head>
+
 <body>
   <header class="header">
     <div class="container">
@@ -114,32 +116,127 @@
 
           <div class="course-card card-small">
             <div class="img-container img-card-2">
-                <span class="btn-time">15 mins</span>
-                <span class="btn-raiting">
-                    4.8
-                    <img src="/img/icons/star.svg" width="15" height="15" alt="">
-                </span>
+              <span class="btn-time">15 mins</span>
+              <span class="btn-raiting">
+                4.8
+                <img src="/img/icons/star.svg" width="15" height="15" alt="">
+              </span>
             </div>
+
             <div class="info-container">
-                <h4 class="course-category">DESIGN</h4>
-                <h2 class="course-title">User Interface Design</h2>
-                <p class="course-desc">Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit, sed do eiusmod tempor
-                    incididunt ut labore et dolore magna.
-                </p>
+              <h4 class="course-category">DESIGN</h4>
+
+              <h2 class="course-title">User Interface Design</h2>
+
+              <p class="course-desc">Lorem ipsum dolor sit amet, consectetur
+                adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna.
+              </p>
             </div>
           </div>
         </section>
 
         <section class="course-row">
-          Второй ряд
+          <div class="course-card card-small">
+            <div class="img-container img-card-3">
+              <span class="btn-time">15 mins</span>
+              <span class="btn-raiting">
+                4.8
+                <img src="/img/icons/star.svg" width="15" height="15" alt="">
+              </span>
+            </div>
+
+            <div class="info-container">
+              <h4 class="course-category">COFFEE</h4>
+
+              <h2 class="course-title">Create Beautiful Latte Art</h2>
+
+              <p class="course-desc">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.
+              </p>
+            </div>
+          </div>
+          <div class="course-card card-big">
+            <div class="img-container img-card-4">
+              <span class="btn-time">15 mins</span>
+              <span class="btn-raiting">
+                4.8
+                <img src="/img/icons/star.svg" width="15" height="15" alt="">
+              </span>
+            </div>
+
+            <div class="info-container">
+              <h4 class="course-category">BUSINESS</h4>
+
+              <h2 class="course-title">Productivity Class: How to manage projects</h2>
+
+              <p class="course-desc">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna.
+              </p>
+            </div>
+          </div>
         </section>
 
       </section> <!-- конец section.courses -->
     </div>
   </main>
 
+  <footer>
+    <div class="container">
+      <section class="courses-info">
+        <h1 class="courses-info-title">
+          Discover Our
+          <br>Courses
+        </h1>
+
+        <section class="footer-row">
+          <div class="left-block">
+            <h4 class="course-number">01</h4>
+            <div class="course-block">
+              <h2 class="course-name">Graphic Design</h2>
+              <span class="course-count">125 courses</span>
+            </div>
+          </div>
+          <img src="img/icons/arrow.svg" width="18" alt="">
+        </section>
+        <section class="footer-row">
+          <div class="left-block">
+            <h4 class="course-number">02</h4>
+            <div class="course-block">
+              <h2 class="course-name">Photography</h2>
+              <span class="course-count">125 courses</span>
+            </div>
+          </div>
+          <img src="img/icons/arrow.svg" width="18" alt="">
+        </section>
+        <section class="footer-row">
+          <div class="left-block">
+            <h4 class="course-number">03</h4>
+            <div class="course-block">
+              <h2 class="course-name">Illustration</h2>
+              <span class="course-count">125 courses</span>
+            </div>
+          </div>
+          <img src="img/icons/arrow.svg" width="18" alt="">
+        </section>
+        <section class="footer-row">
+          <div class="left-block">
+            <h4 class="course-number">04</h4>
+            <div class="course-block">
+              <h2 class="course-name">Web Development</h2>
+              <span class="course-count">125 courses</span>
+            </div>
+          </div>
+          <img src="img/icons/arrow.svg" width="18" alt="">
+        </section>
+
+      </section>
+    </div>
+  </footer>
+
   <script src="wavesurfer.js"></script>
   <script src="media.js"></script>
 </body>
+
 </html>
