--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <header class="header">
     <div class="container">
       <nav class="navigation">
-        <a href="" class="logo">S</a>
+        <a href="/" class="logo">S</a>
+        <a href="/" class="mob-btn">=</a>
         <ul class="navigation-holder">
           <li class="nav-links">
             <a href="#">Explore</a>
@@ -182,13 +183,10 @@
     </div>
   </main>
 
-  <footer>
+  <footer class="footer">
     <div class="container">
       <section class="courses-info">
-        <h1 class="courses-info-title">
-          Discover Our
-          <br>Courses
-        </h1>
+        <h1 class="courses-info-title">Discover Our <br> Courses</h1>
 
         <section class="footer-row">
           <div class="left-block">
