--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,12 +7,11 @@
   <link rel="stylesheet" href="style.css">
   <title>Сайт визитка</title>
 </head>
-
 <body>
   <header class="header">
     <div class="container">
       <nav class="navigation">
-        <a href="/" class="logo">S</a>
+        <a href="" class="logo">S</a>
         <a href="/" class="mob-btn">=</a>
         <ul class="navigation-holder">
           <li class="nav-links">
@@ -152,11 +150,13 @@
 
               <h2 class="course-title">Create Beautiful Latte Art</h2>
 
-              <p class="course-desc">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.
+              <p class="course-desc">Lorem ipsum dolor sit amet, consectetur
+                adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna.
               </p>
             </div>
           </div>
+
           <div class="course-card card-big">
             <div class="img-container img-card-4">
               <span class="btn-time">15 mins</span>
@@ -171,9 +171,9 @@
 
               <h2 class="course-title">Productivity Class: How to manage projects</h2>
 
-              <p class="course-desc">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna.
+              <p class="course-desc">Lorem ipsum dolor sit amet, consectetur
+                adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna.
               </p>
             </div>
           </div>
@@ -182,12 +182,13 @@
       </section> <!-- конец section.courses -->
     </div>
   </main>
-
+  
   <footer class="footer">
     <div class="container">
       <section class="courses-info">
-        <h1 class="courses-info-title">Discover Our <br> Courses</h1>
 
+        <h1 class="course-info-title">Discover Our <br> Courses</h1>
+        
         <section class="footer-row">
           <div class="left-block">
             <h4 class="course-number">01</h4>
@@ -196,7 +197,7 @@
               <span class="course-count">125 courses</span>
             </div>
           </div>
-          <img src="img/icons/arrow.svg" width="18" alt="">
+          <img src="/img/icons/arrow.svg" width="18" alt="">
         </section>
         <section class="footer-row">
           <div class="left-block">
@@ -206,7 +207,7 @@
               <span class="course-count">125 courses</span>
             </div>
           </div>
-          <img src="img/icons/arrow.svg" width="18" alt="">
+          <img src="/img/icons/arrow.svg" width="18" alt="">
         </section>
         <section class="footer-row">
           <div class="left-block">
@@ -216,7 +217,7 @@
               <span class="course-count">125 courses</span>
             </div>
           </div>
-          <img src="img/icons/arrow.svg" width="18" alt="">
+          <img src="/img/icons/arrow.svg" width="18" alt="">
         </section>
         <section class="footer-row">
           <div class="left-block">
@@ -226,9 +227,8 @@
               <span class="course-count">125 courses</span>
             </div>
           </div>
-          <img src="img/icons/arrow.svg" width="18" alt="">
+          <img src="/img/icons/arrow.svg" width="18" alt="">
         </section>
-
       </section>
     </div>
   </footer>
@@ -236,5 +236,4 @@
   <script src="wavesurfer.js"></script>
   <script src="media.js"></script>
 </body>
-
 </html>
